hold up, let him cook

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -8,24 +8,58 @@
 	</head>
 	<body id="container">
 		<aside id="navigation">
-			<img id="logo" src="./src/logo.png" alt="logo" />
+			<h1 id="logo_text">tozu</h1>
 			<p class="biography">
-				Hello! I’m <span>tozeos</span>, but you can also call
-				me<span>tozu</span>. <br />
-				I'm a <span>pixelartist</span> and an
-				<span>English language teacher</span> based in Brazil. I enjoy PC games
-				and programming.
+				Hello! I’m <span>tozeos</span>, but you can also call me
+				<span>tozu</span>. <br />
+				I'm a <span>pixelartist</span> based in Brazil. I enjoy PC games and
+				programming.
 			</p>
+			<nav id="socials">
+				<a
+					class="ad"
+					href="https://bsky.app/profile/tozeos.dev.br"
+					target="_blank"
+					rel="noopener noreferrer"
+					>Bluesky</a
+				><a
+					class="ad"
+					href="https://furaffinity.net/user/tozeos"
+					target="_blank"
+					rel="noopener noreferrer"
+					>Furaffinity</a
+				><a
+					href="http://ko-fi.com/tozeos"
+					target="_blank"
+					rel="noopener noreferrer"
+					>Ko-Fi</a
+				><a
+					class="ad"
+					href="http://t.me/tozusgallery"
+					target="_blank"
+					rel="noopener noreferrer"
+					>Telegram</a
+				><a
+					href="http://twitch.tv/tozeos"
+					target="_blank"
+					rel="noopener noreferrer"
+					>Twitch</a
+				>
+				<a
+					href="https://twitter.com/IceIceBbi"
+					target="_blank"
+					rel="noopener noreferrer"
+					>Twitter</a
+				>
+			</nav>
 			<nav id="navigation">
 				<a class="menu_item" href="/">Home</a>
-				<a class="menu_item" href="/">Socials</a>
-				<a class="menu_item" href="/">Commission info</a>
-				<a class="menu_item" href="/">Terms of service</a>
-				<a class="menu_item" href="/">Dev porfolio</a>
+				<a class="menu_item" href="/commission-info.html">Commission info</a>
+				<a class="menu_item active_button" href="/">Terms of service</a>
 			</nav>
 			<footer>
 				Website made with <span><3</span> by tozeos. <br />
-				Amazing illustration by Ed Rocha.
+				Amazing illustration by <a href="https://ko-fi.com/boiolas">Ed Luz</a>.
 			</footer>
 		</aside>
 
